# LUMOS

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
lumos/: __init__.py  io.py  visualization.py
lumos/calibration/: __init__.py  bias.py  core.py
lumos/photometry/: __init__.py  aperture.py  core.py  detect.py  detection.py
lumos/utils/: __init__.py  helpers.py
